hphp/test/zend/good/ext/standard/tests/file/fnmatch_basic.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists('fnmatch'))
    die("skip fnmatch() function is not available");
}
