hphp/test/zend/bad/ext/mbstring/tests/overload02.php.skipif
<?php 
	extension_loaded('mbstring') or die('skip mbstring not available'); 
	if (!function_exists("mail")) {
		die('skip mail() function is not available.');
	}
	if (!function_exists("mb_ereg_replace")) {
		die('skip mb_ereg_replace() function is not available.');
	}
?>